fixed name text-align

--- a/src/components/Homepage/Homepage.css
+++ b/src/components/Homepage/Homepage.css
@@ -86,5 +86,7 @@
         margin-top: 0;
     }
 
-
+    .name{
+        text-align: center
+    }
 }
